--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "click>=8.1",
+    "fastapi>=0.115",
     "jinja2>=3.1",
     "markdown>=3.5",
     "python-frontmatter>=1.0",
+    "uvicorn[standard]>=0.30",
     "weasyprint>=60.0",
 ]
 
@@ -28,5 +30,6 @@ pythonpath = ["src"]
 
 [dependency-groups]
 dev = [
+    "httpx>=0.27",
     "pytest>=7.0",
 ]
